Make query controls collapsible in spreadsheet and table views.  This should help enable better use of screen real estate, especially in spreadsheet view.

--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -216,3 +216,8 @@ tr.data-row-clickable:hover {
 .extra-space-left {
   margin-left: 1em;
 }
+
+.SimpleHyperlink {
+  display: inline;
+  white-space: nowrap;
+}
