--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -173,10 +173,10 @@ tr.data-row-clickable:hover {
 }
 
 .notify {
-  background: #CCDDFF;
+  background: #FFF;
   padding: 0.2em;
-  border: 1px solid black;
-  position: fixed;
+  border: 2px solid #CDF;
+  vertical-align: middle;
 }
 
 .error {
