Snazzy new interface for select tests in Create Job view.  Tests are now presented in a scrollable table, with descriptions displayed in a resizable pane on the right. -new TestSelector widget displays table + description -move some basic input handling from DynamicTable into DataTable, so that plain DataTables can handle clicks -make DataTable capable of refreshing the widgets in a table without refreshing the entire table - this is useful for updating selections -pull out the one bit of SelectionManager that depends on DynamicTable (as opposed to DataTable).  This is now in DynamicTableSelectionManager, and the orignal SelectionManager can work with a plain DataTable. -make SelectionManager capable of acting as the TableWidgetFactory for producing row selection checkboxes -fix a couple minor bugs in (Site)CreateJobView, where some controls (skip verify, custom tests) would not be disabled when they should be -pull out ArrayDataSource.JSONObjectComparator into a top-level class, so it could be used elsewhere to sort JSONObjects

--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -220,3 +220,16 @@ tr.data-row-clickable:hover {
   display: inline;
   white-space: nowrap;
 }
+
+.test-description {
+  white-space: pre;
+}
+
+.gwt-HorizontalSplitPanel {
+  border: 1px solid #ACF;
+}
+
+.gwt-HorizontalSplitPanel .hsplitter {
+  cursor: move;
+  background: #91c0ef;
+}
