add test attributes to test detail view, in an expandable box

--- a/frontend/client/src/autotest/public/tkoclient.css
+++ b/frontend/client/src/autotest/public/tkoclient.css
@@ -51,3 +51,12 @@ div.spreadsheet-cell-nonclickable {
   white-space: pre;
   font-family: monospace;
 }
+
+.test-attributes .content {
+  white-space: pre;
+  font-family: monospace;
+}
+
+.test-attributes .header table {
+  font-weight: bold;
+}
