Wrap the TKO drop-down log viewers with scroll panels, so that when FF3 cuts them off, you can still scroll over to see their contents.  Also limit the max height, since there's a scroller now.
This is far from perfect in FF3 (works beautifully in FF2) but I think it's an improvement, and I don't have time at the moment to mess around with FF's quirky layout mechanisms.

Signed-off-by: Steve Howard <showard@google.com>

--- a/frontend/client/src/autotest/public/tkoclient.css
+++ b/frontend/client/src/autotest/public/tkoclient.css
@@ -47,9 +47,10 @@ div.spreadsheet-cell-nonclickable {
   margin-bottom: 2px;
 }
 
-.log-file-text {
+.log-file-panel .content {
   white-space: pre;
   font-family: monospace;
+  max-height: 30em;
 }
 
 .test-attributes .content {
