Moved the notification box to the top-center of the browser, and changed the background color to yellow (a la Gmail). Also removed the DOCTYPE strings from the HTML files, as they were causing problems with GWT hosted mode.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>

--- a/frontend/client/src/autotest/public/afeclient.css
+++ b/frontend/client/src/autotest/public/afeclient.css
@@ -153,10 +153,15 @@ tr.data-row-clickable:hover {
 }
 
 .notify {
-  background: #FFF;
-  padding: 0.2em;
-  border: 2px solid #CDF;
   vertical-align: middle;
+  width: 100%;
+}
+
+.notify-inner {
+  background: #FEF0A7;
+  padding: 0.2em;
+  vertical-align: middle;
+  margin: 0 auto;
 }
 
 .error {
