Change control file font to fixed-width on the AFE Job Details view.
Risk: low
Visibility: medium (UI change)

Signed-off-by: James Ren <jamesren@google.com>

--- a/frontend/client/src/autotest/public/common.css
+++ b/frontend/client/src/autotest/public/common.css
@@ -31,6 +31,7 @@ body .menubar-hand-cursor .gwt-MenuItem {
   cursor: pointer;
 }
 
-.preformatted {
+.code {
   white-space: pre;
+  font-family: Courier New, Courier, monospace;
 }
